--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Austin Morris",
   "license": "MIT",
   "dependencies": {
+    "history": "^4.5.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-css-modules": "^4.1.0",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -19,7 +22,11 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "webpack": "^1.13.2",
+    "css-loader": "^0.26.2",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-loader": "^1.3.3",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "babel": {
